# secure-messenger

./: .gitignore  README.md  build.sh  chat_app.py  chat_manager.py  demo.py  main.py  mobile_setup_guide.md  pyproject.toml  secure_messenger_gui.py
client/: __init__.py  crypto_utils.py  receiver.py  sender.py
crypto/: __init__.py  nacl_wrapper.py
mobile_app/: README.md  buildozer.spec  main.py  run_build.sh  test_desktop.py
server/: __init__.py  app.py  models.py  routes.py  security.py  storage.py
